[metadata]
name = eiffellib
summary = Python library for sending and receiving Eiffel events
author = Tobias Persson
author-email = tobiaspn@axis.com
license = Apache License, Version 2.0
home-page = https://github.com/eiffel-community/eiffel-pythonlib
description-file = README.rst
classifiers = Development Status :: 5 - Production/Stable
              Programming Language :: Python
              License :: OSI Approved :: Apache Software License

[entry_points]

[options]
install_requires =
    jsonschema >= 3.0.0,<4

[options.extras_require]
rabbitmq = pika >= 1.0.1,<2

[files]
packages =
    eiffellib

[extras]

[test]
addopts = tests

[tool:pytest]
addopts =
    --cov eiffellib --cov-report term-missing
    --verbose

[aliases]
docs = build_sphinx

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[pbr]
autodoc_tree_index_modules = True

[devpi:upload]
no-vcs = 1
formats = bdist_wheel
