[metadata]
name = eiffellib
summary = Python library for sending and receiving Eiffel events
author = Tobias Persson
author-email = tobiaspn@axis.com
license = Apache License, Version 2.0
home-page = https://github.com/eiffel-community/eiffel-pythonlib
long_description = file: README.rst
classifiers = Development Status :: 5 - Production/Stable
              Programming Language :: Python
              License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
	=src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
install_requires =
    importlib-metadata; python_version<"3.8"
    jsonschema

[options.package_data]
* = *.json

[options.packages.find]
where = src
exclude =
	tests

[options.extras_require]
rabbitmq = pika >= 1.0.1,<2
testing =
	pytest
	pytest-cov

[options.entry_points]

[test]
extras = True

[tool:pytest]
addopts =
    --cov eiffellib --cov-report term-missing
    --verbose
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
	.tox
	build
	dist
	.eggs
	docs/conf.py

[pyscaffold]
version = 4.3.1
package = eiffellib
